tests/language_modules/06_arrays/invalid_semantics/unknown_array_variable.vf
module UnknownArrayVariable

procedure main()
is
    check values[0] = 1
end main

end UnknownArrayVariable